Correct JS to change z-index without .preactive-slide

--- a/less/styles.less
+++ b/less/styles.less
@@ -589,10 +589,7 @@ h1, h2, h3, h4, h5 {
         transition: left 1s;
         animation: right-to-left 0.7s;
       }
-      
-      &.preactive-slide {
-        z-index: 9;
-      }
+
     }
     
     &-text {
